# vaquita-stellar

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
contracts/vaquita/: Cargo.toml
contracts/vaquita/src/: lib.rs  test.rs
src/: App.tsx
src/components/: Button.tsx  CreateClient.tsx  CreateReceiver.tsx  Divider.tsx  Input.tsx  SendToken.tsx  StellarExpertLink.tsx  WithdrawTokens.tsx
src/interfaces/contracts/: contract.interface.ts
src/services/: stellar.service.ts  wallet.service.ts
