[package]
name = "vaquita"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
blend-contract-sdk = "=2.22.0-beta.4"
soroban-sdk = { workspace = true }
#blend-contract-sdk = "1.22.0"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
